--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine on
 RewriteCond %{HTTP_HOST} ^www\.calculadora-de-cortina\.com\.br [NC]
-RewriteRule ^(.*)$ http://calculadora-de-cortina.com.br/$1 [L,R=301]
+RewriteRule ^(.*)$ https://calculadora-de-cortina.com.br/$1 [L,R=301]
 
 # BEGIN Compress text files
 <ifModule mod_deflate.c>
